--- a/1752.html
+++ b/1752.html
@@ -1043,7 +1043,7 @@
 				</div>
 				
 				<h4 style="color: #e3d2b4; margin: 2% 0 2% 2%;">How to Use</h4>
-				<p style="margin-left: 3%; margin-right: 3%;">Mit Voyant Tools stehen vielfältige Analysemöglichkeiten aller Tagebucheinträge (letzte Hand) zur Verfügung. Hover über den Kopf der Fenster blendet weitere Voyant Tools und Optionen ein.</p>
+				<p style="margin-left: 3%; margin-right: 3%;">Mit Voyant Tools stehen vielfältige Analysemöglichkeiten aller Tagebucheinträge (letzte Hand) zur Verfügung. Hier werden eine Word-Cloud der häufigsten vorkommenden Wörter (mit Ausnahme sog. Stopwords wie Konjunktionen, Artikel, Präpositionen usw.) und ein Reader zum linearen Lesen und Durchsuchen des gesamten Tagebuchtextes präsentiert. Hover über den Kopf der Fenster blendet weitere Voyant Tools und Optionen ein.</p>
 		</div>
 		
 		
