--- a/impressum.html
+++ b/impressum.html
@@ -106,15 +106,13 @@ Die Betreiber der Seiten sind bemüht, stets die Urheberrechte anderer zu beacht
 <li>Banner und Abb. 1: Schiff Irene, &#xa9; Archiv der Evangelischen Brüder-Unität Herrnhut, Signatur: Ts – Bd.2.1.</li>
 <li>Abb. 2: Portrait Captain Nicholas Garrison (1701-1781); &#xa9; Archiv der Evangelischen Brüder-Unität Herrnhut, Gemäldesammlung, GS 375.</li>
 </ul>
-<h5 style="color: #e3d2b4;">Reise 1746/1747</h5>
+<h5 style="color: #e3d2b4;">Karten</h5>
 <ul>
-<li>Karte 1: Bellin, Jacques Nicolas (1703-1772): Carte Reduite des Isles Britanniques en Cinq Feuilles [...[] Premiere Feuille Partie Meridionale de l'Angleterre. Paris 1757.(<a href="https://www.davidrumsey.com/luna/servlet/s/65q5wu">Online</a> via David Rumsey Map Collection, David Rumsey Map Center, Stanford Libraries; licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/3.0/">CC BY-NC-SA 3.0</a>).
-<li>Karte 2: Bellin, Jacques Nicolas (1703-1772): Carte Reduite de l'Ocean Occidental Contenant Partie des Costes d'Europe et d'Afrique. Paris 1766. (<a href="https://www.davidrumsey.com/luna/servlet/s/5oc131">Online</a> via David Rumsey Map Collection, David Rumsey Map Center, Stanford Libraries; licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/3.0/">CC BY-NC-SA 3.0</a>).</li>
-<li>Karte 3: Sotzmann, Daniel Friedrich: New Jersey: Entworfen von D.F. Sotzmann. Hamburg bey Carl Ernest Bohm 1797. (<a href="https://www.davidrumsey.com/luna/servlet/s/yq4637">Online</a> via David Rumsey Map Collection, David Rumsey Map Center, Stanford Libraries; licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/3.0/">CC BY-NC-SA 3.0</a>).</li>
-</ul>
-<h5 style="color: #e3d2b4;">Reise 1761</h5>
-<ul>	
-<li>Karte 1: Faden, William (1749-1836): Map of the Central States of Europe Situate between France and Russia. London 1816. (<a href="https://www.davidrumsey.com/luna/servlet/s/y5sk1q">Online</a> via David Rumsey Map Collection, David Rumsey Map Center, Stanford Libraries; licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/3.0/">CC BY-NC-SA 3.0</a>).</li>
+<li>Bellin, Jacques Nicolas (1703-1772): Carte Reduite des Isles Britanniques en Cinq Feuilles [...] Premiere Feuille Partie Meridionale de l'Angleterre. Paris 1757.(<a href="https://www.davidrumsey.com/luna/servlet/s/65q5wu">Online</a> via David Rumsey Map Collection, David Rumsey Map Center, Stanford Libraries; licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/3.0/">CC BY-NC-SA 3.0</a>).
+<li>Bellin, Jacques Nicolas (1703-1772): Carte Reduite de l'Ocean Occidental Contenant Partie des Costes d'Europe et d'Afrique. Paris 1766. (<a href="https://www.davidrumsey.com/luna/servlet/s/5oc131">Online</a> via David Rumsey Map Collection, David Rumsey Map Center, Stanford Libraries; licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/3.0/">CC BY-NC-SA 3.0</a>).</li>
+<li>Sotzmann, Daniel Friedrich: New Jersey: Entworfen von D.F. Sotzmann. Hamburg bey Carl Ernest Bohm 1797. (<a href="https://www.davidrumsey.com/luna/servlet/s/yq4637">Online</a> via David Rumsey Map Collection, David Rumsey Map Center, Stanford Libraries; licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/3.0/">CC BY-NC-SA 3.0</a>).</li>
+<li>Faden, William (1749-1836): Map of the Central States of Europe Situate between France and Russia. London 1816. (<a href="https://www.davidrumsey.com/luna/servlet/s/y5sk1q">Online</a> via David Rumsey Map Collection, David Rumsey Map Center, Stanford Libraries; licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/3.0/">CC BY-NC-SA 3.0</a>).</li>
+<li>Mount, John / Page, Thomas: A chart of the North Sea. Printed for & sold by Page & Mount. London. (to accompany) The English pilot ... northern navigation ... London: Printed for W. and J. Mount, T. Page and Son. M,DCC,LVI. (1756). (<a href="https://www.davidrumsey.com/luna/servlet/s/410b8e">Online</a> via David Rumsey Map Collection, David Rumsey Map Center, Stanford Libraries; licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/3.0/">CC BY-NC-SA 3.0</a>).</li>
 </ul>
 
 
