--- a/1761.html
+++ b/1761.html
@@ -122,7 +122,7 @@
 				<div id="loadmap3" class="con">
 				
 					<img src="img/1761atlantic_thumbnail.jpg" alt="america" style="width:100%; border: 10px solid #e3d2b4;">
-					<a class="btn1 btn btn-primary btn-lg" role="button" href="1761atlantic.html">Karte öffnen</a>
+					<a class="btn1 btn btn-primary btn-lg" role="button" href="1761atlantik.html">Karte öffnen</a>
 				
 				</div>
 		</div>
