--- a/1761atlantik.html
+++ b/1761atlantik.html
@@ -76,7 +76,7 @@
 	
 	<div class="jumbotron3">
 		<div class="container">
-			<h1 style="color: #fff; font-size: 350%;">Reise nach Amerika im Jahr 1761</h1>
+			<h1 style="color: #fff; font-size: 350%; display:flex; justify-content: center;">Reise nach Amerika im Jahr 1761</h1>
 		</div>
 	</div>
 	
@@ -90,12 +90,12 @@
 		<a class="btn1 btn btn-primary btn-lg" role="button" style="float:right;" href="1761.html">Übersicht &#129046;</a>
 		
 					
-		<div style="padding-left: 1%; padding-top: 1%;" id="atlantic">
+		<div style="display:flex; justify-content: center;" id="atlantic">
 				<h3 style="color: #e3d2b4;">Teil 4: Der Atlantik und Nordamerika</h3>		
 		</div>
 	
 
-		<div style="padding-left: 1%;">
+		<div style="padding-left: 8%; padding-right: 7%;">
 				<a class="btn btn-primary btn-lg" role="button" onclick="myShowHTUFunction2()">How to Use</a>
 				<a id="routeOff" class="btn btn-primary btn-lg" role="button" style="float: right; margin-right:1%;" onclick="hidegraph2()">Route ausblenden</a>
 			<a id="routeOn" class="btn btn-primary btn-lg" role="button" style="float: right; margin-right:1%;display:none;" onclick="showgraph2()">Route einblenden</a>
