--- a/1761land.html
+++ b/1761land.html
@@ -76,7 +76,7 @@
 	
 	<div class="jumbotron3">
 		<div class="container">
-			<h1 style="color: #fff; font-size: 350%;">Reise nach Amerika im Jahr 1761</h1>
+			<h1 style="color: #fff; font-size: 350%; display:flex; justify-content: center;">Reise nach Amerika im Jahr 1761</h1>
 		</div>
 	</div>
 	
@@ -88,12 +88,12 @@
 		<a class="btn1 btn btn-primary btn-lg" role="button" href="1761.html">&#129044; Übersicht</a>
 		<a class="btn1 btn btn-primary btn-lg" role="button" style="float:right;" href="1761nordsee.html">Teil 2 &#129046;</a>
 		
-		<div  style="padding-left: 1%; padding-top: 1%;" id="channel">
+		<div style="display:flex; justify-content: center;" id="channel">
 				<h3 style="color: #e3d2b4;">Teil 1: Europa - Herrnhut bis Zeist</h3>
 		</div>
 		
 		
-		<div style="padding-left: 1%;">
+		<div style="padding-left: 8%; padding-right: 7%;">
 				
 			<a class="btn btn-primary btn-lg" role="button" onclick="myShowHTUFunction1()">How to Use</a>
 			<a id="routeOff" class="btn btn-primary btn-lg" role="button" style="float: right; margin-right:1%;" onclick="hidegraph1()">Route ausblenden</a>
