--- a/1761kanal.html
+++ b/1761kanal.html
@@ -12,7 +12,7 @@
 
     <link rel="icon" href="favicon.ico">
 
-        <title>Seereise 1746/47</title>
+        <title>Seereise 1761</title>
 
         
 		
