--- a/1761.html
+++ b/1761.html
@@ -162,7 +162,7 @@
 		</div>
 
 		<div style="padding-left: 10%; padding-right: 5%;">
-		    <iframe style="height: 600px; width: 90%; margin: 1% 4% 0 0; border: 10px solid #e3d2b4;" src="https://voyant-tools.org/?view=reader&input=https://www.moravians-at-sea.uni-jena.de/voyant/Diarium1761.txt"></iframe>
+		    <iframe style="height: 600px; width: 90%; margin: 1% 4% 0 0; border: 10px solid #e3d2b4;" src="https://voyant-tools.org/?view=reader&input=https://www.moravians-at-sea.uni-jena.de/voyant/Diarium1761_2.txt"></iframe>
 		</div>
 <br/>
 
