mentioned persons added

--- a/1761.html
+++ b/1761.html
@@ -175,6 +175,9 @@
 	  <li>Johann Franz Oberlin &#x1f517;<a href="https://moravian.bucknell.edu/map/#places/year_range/1600;2015/firstname/Johann%20Franz/surname/Oberlin" target="_blank">Moravian Lives</a></li>
 	  <li>Johann Michael Möhring &#x1f517;<a href="https://moravian.bucknell.edu/map/#places/year_range/1600;2015/firstname/Michael/surname/M%C3%B6hring" target="_blank">Moravian Lives</a></li>
 	  <li>David Dietrich Schönberg &#x1f517;<a href="https://moravian.bucknell.edu/map/#places/year_range/1600;2015/firstname/David%20Dietrich/surname/Sch%C3%B6nberg" target="_blank">Moravian Lives</a></li>
+	  <li>Nathanael Seidel &#x1f517;<a href="https://moravian.bucknell.edu/map/#places/year_range/1600;2015/firstname/Nathanael/surname/Seidel" target="_blank">Moravian Lives</a></li>
+	  <li>Andreas Langgaard &#x1f517;<a href="https://moravian.bucknell.edu/map/#places/year_range/1600;2015/firstname/andreas/surname/langgaard" target="_blank">Moravian Lives</a></li>
+	  <li>Anna Münster &#x1f517;<a href="https://moravian.bucknell.edu/map/#places/year_range/1600;2015/firstname/anna/surname/m%C3%BCnster" target="_blank">Moravian Lives</a></li>
 	  
 	  
 	 
