zoom adapted; map and calendar switched 1752

--- a/1746amerika.html
+++ b/1746amerika.html
@@ -99,6 +99,7 @@
 
 		<div style="padding-left: 8%; padding-right: 7%;">
 				<a class="btn btn-primary btn-lg" role="button" onclick="myShowHTUFunction3()">How to Use</a>
+				<a class="btn btn-primary btn-lg" role="button" style="float: right; margin-right:1%;" href="javascript:location.reload()">Reset Zoom</a>
 				<a id="routeOff" class="btn btn-primary btn-lg" role="button" style="float: right; margin-right:1%;" onclick="hidegraph3()">Route ausblenden</a>
 			<a id="routeOn" class="btn btn-primary btn-lg" role="button" style="float: right; margin-right:1%;display:none;" onclick="showgraph3()">Route einblenden</a>
 				
@@ -672,7 +673,7 @@ function HideDiaryFunctionAm16() {
         var xs = (e.clientX - pointX) / scale,
           ys = (e.clientY - pointY) / scale,
           delta = (e.wheelDelta ? e.wheelDelta : -e.deltaY);
-        (delta > 0) ? (scale *= 1.2) : (scale /= 1.2);
+        (delta > 0) ? (scale *= 1.1) : (scale /= 1.1);
         pointX = e.clientX - xs * scale;
         pointY = e.clientY - ys * scale;
 
