--- a/1746kanal.html
+++ b/1746kanal.html
@@ -95,6 +95,7 @@
 		<div style="padding-left: 8%; padding-right: 7%;">
 				
 			<a class="btn btn-primary btn-lg" role="button" onclick="myShowHTUFunction1()">How to Use</a>
+			<a class="btn btn-primary btn-lg" role="button" style="float: right; margin-right:1%;" href="javascript:location.reload()">Reset Zoom</a>
 			<a id="routeOff" class="btn btn-primary btn-lg" role="button" style="float: right; margin-right:1%;" onclick="hidegraph1()">Route ausblenden</a>
 			<a id="routeOn" class="btn btn-primary btn-lg" role="button" style="float: right; margin-right:1%;display:none;" onclick="showgraph1()">Route einblenden</a>	
 		</div>
@@ -885,7 +886,7 @@ function myHideDiaryFunctionCha23() {
         var xs = (e.clientX - pointX) / scale,
           ys = (e.clientY - pointY) / scale,
           delta = (e.wheelDelta ? e.wheelDelta : -e.deltaY);
-        (delta > 0) ? (scale *= 1.2) : (scale /= 1.2);
+        (delta > 0) ? (scale *= 1.1) : (scale /= 1.1);
         pointX = e.clientX - xs * scale;
         pointY = e.clientY - ys * scale;
 
