--- a/1746.html
+++ b/1746.html
@@ -76,7 +76,7 @@
 	
 	<div class="jumbotron3">
 		<div class="container">
-			<h1 style="color: #fff; font-size: 350%;">Reise nach Amerika in den Jahren 1746/1747</h1>
+			<h1 style="color: #fff; font-size: 350%; display:flex; justify-content: center;">Reise nach Amerika in den Jahren 1746/1747</h1>
 		</div>
 	</div>
 	
