--- a/1752.html
+++ b/1752.html
@@ -78,7 +78,7 @@
 	
 	<div class="jumbotron3">
 		<div class="container">
-			<h1 style="color: #fff; font-size: 350%;">Reise nach Amerika im Jahr 1752</h1>
+			<h1 style="color: #fff; font-size: 350%; display:flex; justify-content: center;">Reise nach Amerika im Jahr 1752</h1>
 		</div>
 	</div>
 	
