literature added; mentioned persons 1752 added

--- a/1752.html
+++ b/1752.html
@@ -1057,8 +1057,8 @@
 		</div>
 <br/>
 
-<!--<div style="padding-left: 1%;">
-		<h3 style="color: #e3d2b4; margin-top: 3%;">Weitere Quellen zu den Passagieren</h3>
+<div style="padding-left: 1%;">
+		<h3 style="color: #e3d2b4; margin-top: 3%;">Erwähnte Passagiere</h3>
 	<ul class="passengers" style="font-size: 150%;">
 	<li>Anna Johanna Piesch</li>
       <li>Witwe Schultz</li>
@@ -1071,7 +1071,7 @@
 	  <li>Mr Waston</li>
 	  <li>Juliane Weckler</li>
     </ul>
-	</div>-->
+	</div>
 
 </div>
 
