--- a/einleitung.html
+++ b/einleitung.html
@@ -141,6 +141,14 @@
 			
 			<p>Mit dem drittem freigeschalteten Reisebericht, deren Verfasserin Anna Johanna Piesch (1726-1788) ist, wird ein Tagebuch mit weiblicher Autorschaft präsentiert. Die Quelle "Anna Johanna Piesch mit 17. led. Schwestern, der Witwe Schulz u. Br. Töltschig von London nach Bethlehem. 28. Sept. bis 25. Nov. 1752." aus dem <a href="https://www.unitaetsarchiv.de/">Unitätsarchiv Herrnhut</a> (Signatur: <a href="https://www.unitaetsarchiv.findbuch.net/php/main.php#522e3134x35">R.14.A.35</a>) wurde im Rahmen einer Online-Übung mit Studierenden (Jennifer Büttner, Sophie Lindauer und Dean Showers) transkribiert.</p> 
 			
+			<h4 style="color: #e3d2b4;">Weiterführende Literatur zur Herrnhuter Seereisen und das Projekt</h3>
+			<ul>
+			  <li>Gisela Mettele: Weltbürgertum oder Gottesreich. Die Herrnhuter Brüdergemeine als globale Gemeinschaft 1727–1857. Göttingen 2009.</li>
+			  <li>Gisela Mettele: Gemeine auf hoher See: Meeresüberfahrten der Herrnhuter Brüdergemeine im 18. Jahrhundert. In: Peter Burschel und Sünne Juterczenka (Hg.): Das Meer. Maritime Welten in der Frühen Neuzeit, S. 405–426.</li>
+			  <li>Martin Prell: Moravians@Sea: A Website for Exploring and Experiencing Moravian Sea Voyages of the 18th Century. In: Journal of Moravian History. (Im Erscheinen)</li>
+			  <li>John W. Jordan: Moravian Immigration to Pennsylvania, 1734-1767 (Transactions of the Moravian Historical Society, Vol 5, No2), <a href="
+    http://www.jstor.org/stable/10.2307/41179779">Online</a>.</li>
+			  </ul>
 			
 			  <h4 style="color: #e3d2b4;">Transkriptionsprinzipien</h3>
 			  <p>Es erfolgt eine vorlagennahe, möglichst zeichengenaue Wiedergabe der Quellen mit Ausnahme folgender stillschweigender Eingriffe
