--- a/einleitung.html
+++ b/einleitung.html
@@ -156,11 +156,10 @@
 			  <li>Satzanfänge werden groß geschrieben</li>
 			  <li>Geminationen werden aufgelöst</li>
 			  <li>Zeilenwechsel werden ignoriert. Sie werden lediglich bei Lyrik und signifikanten horizontalen Leerräumen umgesetzt</li>
-			  <li>Mutmaßliche Kleinbuchstaben (bspw. d, b, w und h) werden im Fall von Substantivanfängen als Großbuchstaben transkribiert</li>
+			  <li>Mutmaßliche Kleinbuchstaben (bspw. d, b, w und h) werden (mit Ausnahme der Reise 1752) im Fall von Substantivanfängen als Großbuchstaben transkribiert.</li>
 			  </ul>
 			  Nicht lesbare Zeichen und Buchstaben werden mit # entsprechend der Anzahl der nicht lesbaren Zeichen  markiert. Unsicher identifizierte Wörter werden mit [?] markiert. Rekonstruierter Text wird in [ ] gesetzt.</p><br/>
 			  
-
 			  <h3 style="color: #e3d2b4;">Technischer Hinweis</h3>
 			  <p>Wir empfehlen die Nutzung der Internetexplorer Firefox, Chrome oder Edge für eine korrekte Darstellung aller Inhalte. Sollten einige Features zwischenzeitlich nicht mehr korrekt dargestellt werden, bitte den Browser Cache leeren.</p>
 
