--- a/einleitung.html
+++ b/einleitung.html
@@ -144,11 +144,13 @@
 			<h4 style="color: #e3d2b4;">Weiterführende Literatur zu Herrnhuter Seereisen und das Projekt</h3>
 			<ul>
 			  <li>Gisela Mettele: Weltbürgertum oder Gottesreich. Die Herrnhuter Brüdergemeine als globale Gemeinschaft 1727–1857. Göttingen 2009.</li>
-			  <li>Gisela Mettele: Gemeine auf hoher See: Meeresüberfahrten der Herrnhuter Brüdergemeine im 18. Jahrhundert. In: Peter Burschel und Sünne Juterczenka (Hg.): Das Meer. Maritime Welten in der Frühen Neuzeit, S. 405–426.</li>
-			  <li>Martin Prell: Moravians@Sea: A Website for Exploring and Experiencing Moravian Sea Voyages of the 18th Century. In: Journal of Moravian History. (Im Erscheinen)</li>
+			  <li>Gisela Mettele: Gemeine auf hoher See: Meeresüberfahrten der Herrnhuter Brüdergemeine im 18. Jahrhundert. In: Peter Burschel und Sünne Juterczenka (Hg.): Das Meer. Maritime Welten in der Frühen Neuzeit. Köln 2021, S. 405–426.</li>
+			  <li>Martin Prell: Moravians@Sea. A Website for Exploring and Experiencing Moravian Sea Voyages of the 18th Century. In: Journal of Moravian History. (Im Erscheinen)</li>
 			  <li>John W. Jordan: Moravian Immigration to Pennsylvania, 1734-1767 (Transactions of the Moravian Historical Society, Vol 5, No2), <a href="
     http://www.jstor.org/stable/10.2307/41179779">Online</a>.</li>
 			  </ul>
+			  
+			  <p>Folgen Sie den Entwicklungen des Projekts zudem auf Twitter unter dem Hashtag <a href="https://twitter.com/search?q=%23moraviansatsea&src=typeahead_click&f=live">#moraviansAtSea</a></p>
 			
 			  <h4 style="color: #e3d2b4;">Transkriptionsprinzipien</h3>
 			  <p>Es erfolgt eine vorlagennahe, möglichst zeichengenaue Wiedergabe der Quellen mit Ausnahme folgender stillschweigender Eingriffe
