--- a/1761atlantik.html
+++ b/1761atlantik.html
@@ -508,7 +508,7 @@ viel über 1/3 der Reise geschafft-->
 			<button class="close1" onclick="myHideDiaryFunction25()">x</button>
 		</div>
 		<br/><span type="facsimile"><a href="https://dfg-viewer.de/show?tx_dlf%5Bdouble%5D=0&tx_dlf%5Bid%5D=https%3A%2F%2Fwww.moravianchurcharchives.findbuch.net%2Fphp%2Fview.php%3Flink%3D547261764a6f75726e616c73x176&tx_dlf%5Bpage%5D=38&tx_dlf%5Bpagegrid%5D=0&cHash=e8fd757562c092a5b9b40860074d142d" target="_blank"><img class="quill" src="img/quill.png"></a></span><br/>
-		<p><u>d. 6ten u. 7ten</u> hielt das harte Wetter unabläßig an; die See war dabey sehr unruhig und wir vermißten abermals einige Schiffe, so daß die Flotte, anstatt sie beym Auslaufen aus etℓ. 90 Segeln bestand, nun bis auf etℓ. 30 herunter gekommen ist. Abends ließ sich ein Luft-Zeichen gleich eines großen freurigen Ballens sehen.</p>
+		<p><u>d. 6ten u. 7ten</u> hielt das harte Wetter unabläßig an; die See war dabey sehr unruhig und wir vermißten abermals einige Schiffe, so daß die Flotte, anstatt sie beym Auslaufen aus etℓ. 90 Segeln bestand, nun bis auf etℓ. 30 herunter gekommen ist. Abends ließ sich ein Luft-Zeichen gleich eines großen feurigen Ballens sehen.</p>
 	</div>
 	
 	<div class="diaryPopuptext" id="myPopup26">
