--- a/1761atlantik.html
+++ b/1761atlantik.html
@@ -532,7 +532,7 @@ viel über 1/3 der Reise geschafft-->
 			<button class="close1" onclick="myHideDiaryFunction28()">x</button>
 		</div>
 		<br/><span type="facsimile"><a href="https://dfg-viewer.de/show?tx_dlf%5Bdouble%5D=0&tx_dlf%5Bid%5D=https%3A%2F%2Fwww.moravianchurcharchives.findbuch.net%2Fphp%2Fview.php%3Flink%3D547261764a6f75726e616c73x176&tx_dlf%5Bpage%5D=38&tx_dlf%5Bpagegrid%5D=0&cHash=e8fd757562c092a5b9b40860074d142d" target="_blank"><img class="quill" src="img/quill.png"></a></span><br/>
-		<p><u>d. 12ten</u> wehte der Wind aus N.O. Es war vor eine Freude! Die fliegenden Fische ließen sich Herden-Weise sehen, welches gemeinigℓ. zu geschehen pflegt, wenn sie vom Dolphin verfolgt werden, da sie dann einen Saz aus dem Waßer heraus thun, und fliegen, so lange ihre Flügel naß sind, u. auf diese Weise entgehen sie ihrem Contrepart. Wir unterhielten uns heute mit Engℓ. u. Irrländischen Gem. Nachrichten, und sangen zum Beschluß der Woche das Epithalamium.</p>
+		<p><u>d. 12ten</u> wehte der Wind aus N.O. Es war vor eine Freude! Die fliegenden Fische ließen sich Heerden-Weise sehen, welches gemeinigℓ. zu geschehen pflegt, wenn sie vom Dolphin verfolgt werden, da sie dann einen Saz aus dem Waßer heraus thun, und fliegen, so lange ihre Flügel naß sind, u. auf diese Weise entgehen sie ihrem Contrepart. Wir unterhielten uns heute mit Engℓ. u. Irrländischen Gem. Nachrichten, und sangen zum Beschluß der Woche das Epithalamium.</p>
 	</div>
 	
 	<div class="diaryPopuptext" id="myPopup29">
