--- a/1761atlantik.html
+++ b/1761atlantik.html
@@ -574,7 +574,7 @@ viel über 1/3 der Reise geschafft-->
 			<button class="close1" onclick="myHideDiaryFunction33()">x</button>
 		</div>
 		<br/><span type="facsimile"><a href="https://dfg-viewer.de/show?tx_dlf%5Bdouble%5D=0&tx_dlf%5Bid%5D=https%3A%2F%2Fwww.moravianchurcharchives.findbuch.net%2Fphp%2Fview.php%3Flink%3D547261764a6f75726e616c73x176&tx_dlf%5Bpage%5D=39&tx_dlf%5Bpagegrid%5D=0&cHash=0e93f43a34158f3fef97f921b9397478" target="_blank"><img class="quill" src="img/quill.png"></a></span><br/>
-		<p><u>d. 17ten</u> ließ sich der Haye, ein Raub-Fisch, bey Calm u. hellen Sonnenschein lange um unser Schiff herum sehen. Er war wol mehr als 10 Fuß lang, und hatte seine Pilots bey sich, welche kleine Fische sind, und darum Pilots genannt werden, weil sich der Haye ihrer Anführung bedient, da er sonst seiner [D]ummheit wegen seine Nahrung nicht zu finden weiß. Der Wind wurde favorable. Nachmittags begingen wir mit frohem Muth das erste L.M. in America, welches <span class="person">Br. Jacobsen</span> zur Bezeugung seiner Freude angestellt hatte.</p>
+		<p><u>d. 17ten</u> ließ sich der Haye, ein Raub-Fisch, bey Calm u. hellen Sonnenschein lange um unser Schiff herum sehen. Er war wol mehr als 10 Fuß lang, und hatte seine Pilots bey sich, welche kleine Fische sind, und darum Pilots genannt werden, weil sich der Haye ihrer Anführung bedient, da er sonst seiner Tummheit wegen seine Nahrung nicht zu finden weiß. Der Wind wurde favorable. Nachmittags begingen wir mit frohem Muth das erste L.M. in America, welches <span class="person">Br. Jacobsen</span> zur Bezeugung seiner Freude angestellt hatte.</p>
 	</div>
 	
 	<div class="diaryPopuptext" id="myPopup34">
