twitter sticker added

--- a/index.html
+++ b/index.html
@@ -99,14 +99,6 @@
 		
 		</div>
 		
-		<span class="HTUPopuptext" id="HTUPopup1">
-		
-		<span style="text-align: center;">
-		<button class="close3" onclick="myHideHTUFunction1()">x</button>
-		</span>
-				<h4 style="color: #e3d2b4; margin: 2% 0 2% 2%;">How to Use</h4>
-				 Mouseover auf eine Nadel blendet das Datum ein.
-		</span>
 		
 		
 		
@@ -115,6 +107,9 @@
       
 		</span>
 	
+				<div class="sticker" id="twitter"><a href="https://twitter.com/search?q=%23moraviansatsea&src=typeahead_click&f=live" style="text-decoration: none; color:white;">#moraviansAtSea</a></div>
+
+		
 		
 		
 		
