font-weight lighter

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		<div style="background-color: rgba(255,255,255,0.6);justify-content: center; padding-top: 1%;">
 		
 		
-	<h1 style="position: relative; display:flex; justify-content: center;">Moravians at Sea</h1>
+	<h1 style="position: relative; display:flex; justify-content: center; font-weight:normal;">Moravians at Sea</h1>
 		<p style="font-size: 180%;">Das Portal zur Erkundung Herrnhuter Seereisen des 18. Jahrhunderts</p>
 		
 	
