correction font weight

--- a/1761.html
+++ b/1761.html
@@ -86,7 +86,7 @@
 		<div id="overlay2" onclick="off()"></div>
 		
 		<div  style="padding-left: 1%; padding-top: 1%;" id="europe">
-				<h3 style="color: #e3d2b4;font-weight:lighter;">Teil 1: Europa - Herrnhut bis Zeist</h3>
+				<h3 style="color: #e3d2b4;">Teil 1: Europa - Herrnhut bis Zeist</h3>
 				
 				<div id="loadmap1" class="con">
 					<img src="img/1761central_europe_thumbnail.jpg" alt="europe" style="width:100%; border: 10px solid #e3d2b4;">
