how to use adapted

--- a/1761nordsee.html
+++ b/1761nordsee.html
@@ -112,8 +112,8 @@
 				
 				<h4 style="color: #e3d2b4; margin: 2% 0 2% 2%;">How to Use</h4>
 				<ul>
-				<li>Klicken Sie auf die <u>Nadeln</u>, um sich die jeweiligen <u>Tagebucheinträge</u> anzeigen zu lassen. Von dort gelangen Sie auch zum dazugehörigen <u>Logbucheintrag</u> eines Tages. Die Nadeln mappen die täglich mittags aufgezeichneten Geokoordinaten des Schiffsstandortes. Die Logbucheinträge werden allerdings nicht vollständig transkribiert wiedergegeben. Mouseover auf eine Nadel blendet das Datum ein.</li>
-				<li>Mit Klick auf <img class="quill" src="img/quill_white.png"> gelangen Sie zum Digitalisat des Tage- bzw. Logbuchs. Das Icon markiert sowohl einen Digitalisatwechsel als auch einen neuen Eintrag.</li>
+				<li>Jede Nadel mappt den jeweiligen Aufenthaltsort bzw. eine gesichtete Landmarke eines Tages. Klicken Sie auf die <u>Nadeln</u>, um sich die jeweiligen <u>Tagebucheinträge</u> anzeigen zu lassen. Mouseover auf eine Nadel blendet das Datum des Aufenthaltes ein.</li>
+				<li>Mit Klick auf <img class="quill" src="img/quill_white.png"> gelangen Sie zum Digitalisat des Tagebuchs. Das Icon markiert sowohl einen Digitalisatwechsel als auch einen neuen Eintrag.</li>
 				</ul>
 		</div>
 		
