--- a/1761atlantik.html
+++ b/1761atlantik.html
@@ -112,7 +112,7 @@
 				
 				<h4 style="color: #e3d2b4; margin: 2% 0 2% 2%;">How to Use</h4>
 				<ul>
-				<li>Jede Nadel mappt den jeweiligen Aufenthaltsort bzw. eine gesichtete Landmarke eines Tages. Klicken Sie auf die <u>Nadeln</u>, um sich die jeweiligen <u>Tagebucheinträge</u> anzeigen zu lassen. Größere Nadeln zeigen längere Aufenthalte an einem Ort an und enthalten immer mehrere Einträge. Mouseover auf eine Nadel blendet das Datum des Aufenthaltes ein.</li>
+				<li>Klicken Sie auf die Nadeln, um sich die jeweiligen Tagebucheinträge anzeigen zu lassen. Sie geben schematisch die Tagespositionen des Schiffs wieder und mappen in den Einträgen erwähnte Landmarken. Mouseover auf eine Nadel blendet das Datum ein.</li>
 				<li>Mit Klick auf <img class="quill" src="img/quill_white.png"> gelangen Sie zum Digitalisat des Tage- bzw. Logbuchs. Das Icon markiert sowohl einen Digitalisatwechsel als auch einen neuen Eintrag.</li>
 				</ul>
 		</div>
