--- a/1761kanal.html
+++ b/1761kanal.html
@@ -458,7 +458,7 @@ Meile hinter Woolwich-->
 			<button class="close1" onclick="myHideDiaryFunction15()">x</button>
 		</div>
 		<br/><span type="facsimile"><a href="https://dfg-viewer.de/show?tx_dlf%5Bdouble%5D=0&tx_dlf%5Bid%5D=https%3A%2F%2Fwww.moravianchurcharchives.findbuch.net%2Fphp%2Fview.php%3Flink%3D547261764a6f75726e616c73x176&tx_dlf%5Bpage%5D=34&tx_dlf%5Bpagegrid%5D=0&cHash=252bf8000b7dbab3e01f34e69447f3f9" target="_blank"><img class="quill" src="img/quill.png"></a></span><br/>
-		<p><u>d. 7ten</u> hatten wir den ganzen tag Calm. Einen Capit., der seine Flagge aufgesteckt hatte, schickte der <span class="person">Commodor</span>, als er solches gewahr wurde eine Kugel, worauf der Capit. die Flagge so gleich einzog. Wir passierten Nachmitt. mit Hülfe der Fide <span class="place">Plymouth</span> u. <span class="place">Edenstone</span>, welches ein auf einem in der See liegenden Felsen hoch gebauter Thurm ist, u. besangen Abends das Haupt voll Blut und Wunden mit innigem Gefühl.</p>
+		<p><u>d. 7ten</u> hatten wir den ganzen tag Calm. Einen Capit., der seine Flagge aufgesteckt hatte, schickte der <span class="person">Commodor</span>, als er solches gewahr wurde eine Kugel, worauf der Capit. die Flagge so gleich einzog. Wir passierten Nachmitt. mit Hülfe der [T]ide <span class="place">Plymouth</span> u. <span class="place">Edenstone</span>, welches ein auf einem in der See liegenden Felsen hoch gebauter Thurm ist, u. besangen Abends das Haupt voll Blut und Wunden mit innigem Gefühl.</p>
 	</div>
 	
 	<div class="diaryPopuptext" id="myPopup16">
