--- a/1761kanal.html
+++ b/1761kanal.html
@@ -470,6 +470,9 @@ Meile hinter Woolwich-->
 	</div>
 </div>
 </div>
+<div style="padding: 1% 0 0 1%; font-size:150%;">
+		<p>Hinweis: Der abschließende Korrekturdurchlauf der Transkription dieses Tagebuchs ist noch nicht erfolgt. <a href="mailto:geschlechtergeschichte@uni-jena.de">Melden</a> Sie uns gern auch verbliebene Transkriptionsfehler.
+	</div>
 </div>
 	
 	<footer class="footer">
