--- a/1761atlantik.html
+++ b/1761atlantik.html
@@ -853,6 +853,10 @@ viel über 1/3 der Reise geschafft-->
 	</div>
 </div>
 </div>
+
+<div style="padding: 1% 0 0 1%; font-size:150%;">
+		<p>Hinweis: Der abschließende Korrekturdurchlauf der Transkription dieses Tagebuchs ist noch nicht erfolgt. <a href="mailto:geschlechtergeschichte@uni-jena.de">Melden</a> Sie uns gern auch verbliebene Transkriptionsfehler.
+	</div>
 </div>
 	
 	
