--- a/1752.html
+++ b/1752.html
@@ -445,7 +445,7 @@
 		<button class="close3" onclick="myHideHTUFunction1()">x</button>
 		</div>
 				<h4 style="color: #e3d2b4; margin: 2% 0 2% 2%;">How to Use</h4>
-				Klicken Sie auf die Nadeln, um sich die jeweiligen Tagebucheinträge anzeigen zu lassen. Sie geben schematisch die Tagespositionen des Schiffs wieder und mappen in den Einträgen erwähnte Landmarken. Mouseover auf eine Nadel blendet das Datum ein.
+				<p>Die Nadeln auf der Route geben schematisch die Tagespositionen des Schiffs zwischen im Tagebuch erwähnten Landmarken (erkennbar an den Richtungswechseln der Route) wieder. Klicken Sie auf die Nadeln, um sich die jeweiligen Tagebucheinträge anzeigen zu lassen. Mouseover auf eine Nadel blendet das Datum ein.</p>
 		</div>
 		
 		
