--- a/index.html
+++ b/index.html
@@ -73,6 +73,15 @@
 		<div style="position: relative; display:flex; justify-content: center;">
 		
 
+		<div style="position: absolute; top: 10%; right:2%;">
+		<a class="btn btn-primary btn-lg" href="1746.html" role="button" style="background-color:#8A0808;color:white;margin: 1% 1%;font-weight: lighter;">1746/47</a><br>
+	
+          <a class="btn btn-primary btn-lg" href="1752.html" role="button" style="background-color:#0B610B;color:white;margin: 1% 1%;font-weight: lighter; float:right;">1752</a><br>
+		  
+		  <a class="btn btn-primary btn-lg" href="1761.html" role="button" style="background-color:#084B8A;color:white;margin: 1% 1%;font-weight: lighter;float:right;">1761</a>
+		
+		</div>
+		
 		
 		<span style="position: absolute; margin-left: auto; margin-right: auto;">
 		
@@ -89,15 +98,6 @@
 		
        </div>
 		
-		
-		<div style="position: relative; display:flex; justify-content: center; margin-top: 2%;">
-		<a class="btn btn-primary btn-lg" href="1746.html" role="button" style="background-color:#8A0808;color:white;margin: 1% 1%;font-weight: lighter;">1746/47</a>
-	
-          <a class="btn btn-primary btn-lg" href="1752.html" role="button" style="background-color:#0B610B;color:white;margin: 1% 1%;font-weight: lighter;">1752</a>
-		  
-		  <a class="btn btn-primary btn-lg" href="1761.html" role="button" style="background-color:#084B8A;color:white;margin: 1% 1%;font-weight: lighter;">1761</a>
-		
-		</div>
 		
 		
 		
