--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       
 		</span>
 	
-				<div class="sticker" id="twitter"><a href="https://twitter.com/search?q=%23moraviansatsea&src=typeahead_click&f=live" style="text-decoration: none; color:white;">#moraviansAtSea</a></div>
+				<div class="sticker" id="twitter"><a href="https://twitter.com/search?q=%23moraviansatsea&src=typeahead_click&f=live" style="text-decoration: none; color:white;"><span style="font-size:larg;">#</span>moraviansAtSea</a></div>
 
 		
 		
