--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		<div style="position: relative; display:flex; justify-content: center;">
 		
 
-		
+		<div class="sticker" id="twitter"><a href="https://twitter.com/search?q=%23moraviansatsea&src=typeahead_click&f=live" style="text-decoration: none; color:white;"><span style="font-size:larg;">#</span>moraviansAtSea</a></div>
 		<span style="position: absolute; margin-left: auto; margin-right: auto;">
 		
 		
@@ -107,10 +107,10 @@
       
 		</span>
 	
-				<div class="sticker" id="twitter"><a href="https://twitter.com/search?q=%23moraviansatsea&src=typeahead_click&f=live" style="text-decoration: none; color:white;"><span style="font-size:larg;">#</span>moraviansAtSea</a></div>
+				
 
 		
-		
+		<div style="background-color: rgba(255,255,255,0.8); position: fixed; bottom: 1%; left: 1%; color:#1E90FF;">Derzeit für Chrome, Firefox & Edge optimiert (Desktop)</div>
 		
 		
 				<svg id="img1" viewBox="0 0 5216 3546" style="background-image: url('img/atlantic.jpg'); background-repeat: no-repeat; background-size: cover; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover;">
