--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		
 		
 	<h2 style="position: relative; display:flex; justify-content: center;">Moravians at Sea</h1>
-		<p style="font-size: 180%;">Das Portal zur Erkundung Herrnhuter Seereisen des 18. Jahrhunderts</p>
+		<p>Das Portal zur Erkundung Herrnhuter Seereisen des 18. Jahrhunderts</p>
 		
 	
 		
@@ -585,7 +585,7 @@ viel über 1/3 der Reise geschafft-->
         <p>Ein Projekt des <a href="https://www.gw.uni-jena.de/fakult%C3%A4t/historisches+institut/bereiche/geschlechtergeschichte">Lehrstuhls für Geschlechtergeschichte</a> der Universität Jena</p>
 
         <!-- Dieser Backlink darf NICHT entfernt werden. DO NOT REMOVE-->
-        https://www.moravians-at-sea.uni-jena.de | Designed by <a href="http://freietemplates.de/">freietemplates.de</a>, adapted by <a href="https://www.gw.uni-jena.de/fakult%C3%A4t/historisches+institut/bereiche/geschlechtergeschichte/martin+prell_+m_a_">Martin Prell</a>
+        <p>https://www.moravians-at-sea.uni-jena.de | Designed by <a href="http://freietemplates.de/">freietemplates.de</a>, adapted by <a href="https://www.gw.uni-jena.de/fakult%C3%A4t/historisches+institut/bereiche/geschlechtergeschichte/martin+prell_+m_a_">Martin Prell</a></p>
       </div>
 	  </footer>
 	
