--- a/einleitung.html
+++ b/einleitung.html
@@ -153,14 +153,14 @@
 			  <p>Folgen Sie den Entwicklungen des Projekts zudem auf Twitter unter dem Hashtag <a href="https://twitter.com/search?q=%23moraviansatsea&src=typeahead_click&f=live">#moraviansAtSea</a></p><br/>
 			
 			  <h4 style="color: #e3d2b4;">Transkriptionsprinzipien</h3>
-			  <p>Es erfolgt eine vorlagennahe, möglichst zeichengenaue Wiedergabe der Quellen mit Ausnahme folgender stillschweigender Eingriffe
+			  <p>Es erfolgt eine vorlagennahe, möglichst zeichengenaue Wiedergabe der Quellen mit Ausnahme folgender stillschweigender Eingriffe</p>
 			  <ul>
 			  <li>Satzanfänge werden groß geschrieben</li>
 			  <li>Geminationen werden aufgelöst</li>
 			  <li>Zeilenwechsel werden ignoriert. Sie werden lediglich bei Lyrik und signifikanten horizontalen Leerräumen umgesetzt</li>
 			  <li>Mutmaßliche Kleinbuchstaben (bspw. d, b, w und h) werden (mit Ausnahme der Reise 1752) im Fall von Substantivanfängen als Großbuchstaben transkribiert.</li>
 			  </ul>
-			  Nicht lesbare Zeichen und Buchstaben werden mit # entsprechend der Anzahl der nicht lesbaren Zeichen  markiert. Unsicher identifizierte Wörter werden mit [?] markiert. Rekonstruierter Text wird in [ ] gesetzt.</p>
+			  <p>Nicht lesbare Zeichen und Buchstaben werden mit # entsprechend der Anzahl der nicht lesbaren Zeichen  markiert. Unsicher identifizierte Wörter werden mit [?] markiert. Rekonstruierter Text wird in [ ] gesetzt.</p>
 			  
 			  <p>Sollten Sie Fehler in den Transkriptionen entdecken oder anderweitige Hinweise haben, freuen wir uns über Ihre <a href="mailto:geschlechtergeschichte@uni-jena.de">Nachricht</a>.</p><br/>
 			  
