--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		<div style="position: relative; display:flex; justify-content: center;">
 		
 
-		<div class="sticker" id="twitter"><a href="https://twitter.com/search?q=%23moraviansatsea&src=typeahead_click&f=live" style="text-decoration: none; color:white;"><span style="font-size:larg;">#</span>moraviansAtSea</a></div>
+		<a href="https://twitter.com/search?q=%23moraviansatsea&src=typeahead_click&f=live" style="text-decoration: none; color:white;"><div class="sticker" id="twitter"><span style="font-size:larg;">#</span>moraviansAtSea</div></a>
 		<span style="position: absolute; margin-left: auto; margin-right: auto;">
 		
 		
