--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		
 		
 	<h2 style="position: relative; display:flex; justify-content: center;">Moravians at Sea</h1>
-		<p>Das Portal zur Erkundung Herrnhuter Seereisen des 18. Jahrhunderts</p>
+		<h5 style="padding-bottom:1%;">Das Portal zur Erkundung Herrnhuter Seereisen des 18. Jahrhunderts</h4>
 		
 	
 		
