--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 				
 
 		
-		<div style="background-color: rgba(255,255,255,0.8); position: fixed; bottom: 1%; left: 1%; color:#1E90FF;">Derzeit für Chrome, Firefox & Edge optimiert (Desktop)</div>
+		<div style="background-color: rgb(4, 28, 39); position: fixed; bottom: 1%; left: 1%; color:#1E90FF;">Derzeit für Chrome, Firefox & Edge optimiert (Desktop)</div>
 		
 		
 				<svg id="img1" viewBox="0 0 5216 3546" style="background-image: url('img/atlantic.jpg'); background-repeat: no-repeat; background-size: cover; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover;">
