--- a/index.html
+++ b/index.html
@@ -1668,7 +1668,7 @@ viel über 1/3 der Reise geschafft-->
     <script>
       function search() {
           var searchQuery = document.getElementById("searchInput").value;
-          var baseUrl = window.location.origin;
+          var baseUrl = "https://mprell.github.io/moravians-at-sea-Prod";
           var searchUrl = baseUrl + "/search.html?q=" + encodeURIComponent(searchQuery);
           window.location.href = searchUrl;
       }
